Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
         distribution: 'adopt'
         cache: 'gradle'
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: unreal/stalker
         username: ${{ secrets.DOCKER_USERNAME }}
